# dash

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dash.py  docker-compose.yml  example.localConfig.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
album/resultImpairment/: appendix.yaml
album/resultImpairment/chapters/_version4/: index.sql
album/resultImpairment/chapters/version3/: index.sql
books/HistoricalLgd/appendix/: appendix.yaml  insert_appendix.sql  table_appendix.sql
books/HistoricalLgdJa/: appendix.yaml
books/demo/: appendix.yaml
books/historicalPd/appendix/: appendix.yaml
books/historicalPdJa/: appendix.yaml
books/rainbow/: appendix.yaml
books/resultImpairment/: appendix.yaml
books/resultImpairmentV2/appendix/: appendix.yaml  insert_appendix.sql  table_appendix.sql
cmd/: __init__.py  backup.py  inspect.py  inspector.py  read.py  restore.py
dash_cmd/: backup.py  inspect.py  main.py  restore.py
internal/config/: __init__.py
internal/db/: __init__.py  database.py  table.py
internal/db/pg/: __init__.py
internal/db/sqlite/: __init__.py  database.py
internal/reader/: __init__.py  process_structure_v1.py  process_structure_v2.py  reader_manager.py
internal/utils/: __init__.py
pkg/aws/: __init__.py  s3.py
pkg/config/: __init__.py  config_manager.py  configuration.py
pkg/config/parser/: __init__.py
pkg/database/: database_interface.py
pkg/database/postgres/: __init__.py  helpers.py  pg_backup.py  pg_restore.py  postgres_manager.py
pkg/term/formatter/: rich.py
(+175 files in other folders)
