[tool.poetry]
name = "dash"
version = "0.1.0"
description = ""
authors = ["LoneExile <Apinant-Moo@tutanota.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
dash = "dash_cmd.main:app"
# dash = "dash:app"

[tool.poetry.dependencies]
python = "^3.10"
app = "^0.0.1"
pyyaml = "6.0.1"
hvac = "2.2.0"
typer = {extras = ["all"], version = "^0.12.3"}
tomli = "2.0.1"
textual = "0.60.0"
rich = "13.7.1"
jinja2 = "3.1.4"
jsonschema = "^4.23.0"
python-configuration = { extras = ["toml", "yaml"], version = "^0.11.0" }
boto3 = "1.34.123"
smart-open = { version = "7.0.4", extras = ["s3"] }
db = "^0.1.1"
psycopg = "3.1.19"
psycopg-pool = "3.2.2"
psycopg-binary = "3.1.19"
pre-commit = "3.7.1"
ruff = "0.4.4"
pyright = "1.1.362"
black = "24.4.2"
httpx = "0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
